--- a/views/all-products.ejs
+++ b/views/all-products.ejs
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
+	<script src="https://kit.fontawesome.com/a207e207d8.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="/css/ready.css">
 	<link rel="stylesheet" href="/css/demo.css">
 	<link rel="icon" type="image/x-icon" href="/img/app_icon.ico">
@@ -44,20 +45,20 @@
 					</form>
 					<ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
 						<li class="nav-item dropdown hidden-caret">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+								aria-haspopup="true" aria-expanded="false">
 								<i class="la la-envelope"></i>
 							</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<a class="dropdown-item" href="#">Action</a>
 								<a class="dropdown-item" href="#">Another action</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#">Something else here</a>
-							</div>
+							</div> -->
 						</li>
-						<li class="nav-item dropdown hidden-caret">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<!-- <li class="nav-item dropdown hidden-caret">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+								aria-haspopup="true" aria-expanded="false">
 								<i class="la la-bell"></i>
 								<span class="notification">3</span>
 							</a>
@@ -113,11 +114,11 @@
 											notifications</strong> <i class="la la-angle-right"></i> </a>
 								</li>
 							</ul>
-						</li>
+						</li> -->
 						<li class="nav-item dropdown">
-							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#"
-								aria-expanded="false"> <img src="/img/profile-icon.png" alt="user-img" width="36"
-									class="img-circle"><span>Steven</span></span> </a>
+							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img
+									src="/img/profile-icon.png" alt="user-img" width="36" class="img-circle"><span>Steven</span></span>
+							</a>
 							<ul class="dropdown-menu dropdown-user">
 								<li>
 									<div class="user-box">
@@ -184,19 +185,19 @@
 				<ul class="nav">
 					<li class="nav-item">
 						<a href="/admin/dashboard">
-							<i class="la la-dashboard"></i>
+							<i class="fa-solid fa-gauge"></i>
 							<p>Dashboard</p>
 						</a>
 					</li>
 					<li class="nav-item">
 						<a href="/admin/product-upload">
-							<i class="la la-table"></i>
-							<p>Upload Products</p>
+							<i class="fa-solid fa-upload"></i>
+							<p>Upload Product</p>
 						</a>
 					</li>
 					<li class="nav-item active">
-						<a href="#">
-							<i class="la la-keyboard-o"></i>
+						<a href="/admin/all-products">
+							<i class="fa-solid fa-tarp"></i>
 							<p>All Products</p>
 							<span class="badge badge-count">
 								<%= products.length %>
@@ -205,7 +206,7 @@
 					</li>
 					<li class="nav-item">
 						<a href="/logout">
-							<i class="la la-th"></i>
+							<i class="fas fa-sign-out-alt"></i>
 							<p>Log Out</p>
 						</a>
 					</li>
@@ -256,18 +257,14 @@
 														<%= product.product_name %>
 													</td>
 													<td>
-														<%= product.wholesale_cost_price ?
-															`₦${product.wholesale_cost_price}` : 'N/A' %>
+														<%= product.wholesale_cost_price ? `₦${product.wholesale_cost_price}` : 'N/A' %>
 													<td>
-														<%= product.wholesale_selling_price ?
-															`₦${product.wholesale_selling_price}` : 'N/A' %>
+														<%= product.wholesale_selling_price ? `₦${product.wholesale_selling_price}` : 'N/A' %>
 													</td>
 													<td>
-														<%= product.retail_cost_price ? `₦${product.retail_cost_price}`
-															: 'N/A' %>
+														<%= product.retail_cost_price ? `₦${product.retail_cost_price}` : 'N/A' %>
 													<td>
-														<%= product.retail_selling_price ?
-															`₦${product.retail_selling_price}` : 'N/A' %>
+														<%= product.retail_selling_price ? `₦${product.retail_selling_price}` : 'N/A' %>
 													</td>
 													<td>
 														<%= product.name %>
@@ -275,8 +272,8 @@
 													<td>
 														<%= product.category %>
 													</td>
-													<td><a href="/product/<%= product.product_id %>/update"
-															class="btn-sm btn-primary" style="cursor: pointer;">Edit</a>
+													<td><a href="/product/<%= product.product_id %>/update" class="btn-sm btn-primary"
+															style="cursor: pointer;">Edit</a>
 													</td>
 												</tr>
 												<% }) %>
