--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MaryBill Conglomerate Ltd. - All Products</title>
+  <title>MaryBill Conglomerate Ltd. - Admin sign in</title>
   <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="icon" type="image/x-icon" href="/img/app_icon.ico">
 
