--- a/views/sales.ejs
+++ b/views/sales.ejs
@@ -194,6 +194,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a href="/branch/<%= branch[0].branch_id %>/transfer-stock">
+                            <i class="fa-solid fa-share"></i>
+                            <p>Transfer Stock</p>
+                            <span class="badge badge-count"></span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a href="/logout">
                             <i class="fas fa-sign-out-alt"></i>
                             <p>Log Out</p>
